<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionChildren"
        android:icon="@drawable/children"
        android:title="@string/children" />

    <item
        android:id="@+id/actionItems"
        android:icon="@drawable/ic_home"
        android:title="@string/items" />

    <item
        android:id="@+id/actionMyPosts"
        android:icon="@drawable/newspaper_variant"
        android:title="@string/my_posts" />

    <item
        android:id="@+id/actionMyRequests"
        android:icon="@drawable/ic_question"
        android:title="@string/my_requests" />

    <item
        android:id="@+id/actionMore"
        android:icon="@drawable/ic_more"
        android:title="@string/more" />
</menu>