<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.gp.findlost.views.splash.SplashFragment"
        android:label="@string/splash_fragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/splashToChildren"
            app:destination="@id/actionChildren"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/actionItems"
        android:name="com.gp.findlost.views.items.ItemsFragment"
        android:label="@string/items_fragment"
        tools:layout="@layout/fragment_items">
        <action
            android:id="@+id/itemMakeRequest"
            app:destination="@id/makeRequestFragment" />
        <action
            android:id="@+id/itemToImage"
            app:destination="@id/imageFragment" />
    </fragment>

    <fragment
        android:id="@+id/actionMore"
        android:name="com.gp.findlost.views.more.MoreFragment"
        android:label="@string/more_fragment"
        tools:layout="@layout/fragment_more" />

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.gp.findlost.views.signin.SignInFragment"
        android:label="@string/signin_fragment"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/signInToSplash"
            app:destination="@id/splashFragment" />
    </fragment>

    <fragment
        android:id="@+id/actionChildren"
        android:name="com.gp.findlost.views.children.ChildrenFragment"
        android:label="@string/children_fragment"
        tools:layout="@layout/fragment_children">
        <action
            android:id="@+id/childrenMakeRequest"
            app:destination="@id/makeRequestFragment" />
        <action
            android:id="@+id/childToImage"
            app:destination="@id/imageFragment" />
    </fragment>

    <fragment
        android:id="@+id/actionMyPosts"
        android:name="com.gp.findlost.views.myposts.MyPostsFragment"
        android:label="@string/my_posts_fragment"
        tools:layout="@layout/fragment_my_posts">
        <action
            android:id="@+id/myPostsToAdd"
            app:destination="@id/addItemFragment" />
        <action
            android:id="@+id/showRequests"
            app:destination="@id/requestsFragment" />
        <action
            android:id="@+id/myPostsToImage"
            app:destination="@id/actionItems" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.gp.findlost.views.signup.SignUpFragment"
        android:label="@string/sign_up_fragment"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.gp.findlost.views.editprofile.EditProfileFragment"
        android:label="@string/edit_profile_fragment"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/addItemFragment"
        android:name="com.gp.findlost.views.additem.AddItemFragment"
        android:label="@string/add_fragment"
        tools:layout="@layout/fragment_add_item" />
    <fragment
        android:id="@+id/requestsFragment"
        android:name="com.gp.findlost.views.requests.RequestsFragment"
        android:label="fragment_requests"
        tools:layout="@layout/fragment_requests">

        <argument
            android:name="name"
            app:argType="string"
            app:nullable="false" />

        <argument
            android:name="type"
            app:argType="com.gp.findlost.data.model.RequestType"
            app:nullable="false" />

        <argument
            android:name="id"
            app:argType="string"
            app:nullable="false" />
    </fragment>
    <dialog
        android:id="@+id/makeRequestFragment"
        android:name="com.gp.findlost.views.makerequest.MakeRequestFragment"
        android:label="fragment_make_request"
        tools:layout="@layout/fragment_make_request">

        <argument
            android:name="id"
            app:argType="string"
            app:nullable="false" />

        <argument
            android:name="founderId"
            app:argType="string"
            app:nullable="false" />

        <argument
            android:name="type"
            app:argType="com.gp.findlost.data.model.RequestType"
            app:nullable="false" />

        <argument
            android:name="itemType"
            app:argType="com.gp.findlost.data.model.ItemType"
            app:nullable="false" />
    </dialog>

    <fragment
        android:id="@+id/actionMyRequests"
        android:name="com.gp.findlost.views.myrequests.MyRequestsFragment"
        android:label="MyRequestsFragment"
        tools:layout="@layout/fragment_my_requests" />

    <fragment
        android:id="@+id/imageFragment"
        android:name="com.gp.findlost.views.image.ImageFragment"
        android:label="ImageFragment">
        <argument
            android:name="image"
            app:argType="string"
            app:nullable="false" />
    </fragment>


</navigation>