<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isChildren"
            type="java.lang.Boolean" />

        <variable
            name="type"
            type="java.lang.String" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:context=".views.additem.AddItemFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="28dp">

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{ isChildren? View.VISIBLE : View.GONE}"
                app:constraint_referenced_ids="addItemAge, genderTV, genderRG" />

            <TextView
                android:id="@+id/typeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/type"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/typeRG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeTV">

                <RadioButton
                    android:id="@+id/addChildren"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/children"
                    android:textColor="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/addItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/item"
                    android:textColor="@color/colorPrimary" />

            </RadioGroup>

            <TextView
                android:id="@+id/type1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@{type + ` ` + @string/type}"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeRG" />

            <RadioGroup
                android:id="@+id/type1RG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type1TV">

                <RadioButton
                    android:id="@+id/lost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/lost"
                    android:textColor="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/found"
                    android:textColor="@color/colorPrimary" />

            </RadioGroup>


            <TextView
                android:id="@+id/cityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/city"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type1RG" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cityCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cityTV">

                <Spinner
                    android:id="@+id/citySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/imagesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/images"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityCardView" />

            <ImageView
                android:id="@+id/addImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="12dp"
                android:src="@drawable/plus"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@id/imagesTV"
                app:layout_constraintStart_toEndOf="@id/imagesTV"
                app:layout_constraintTop_toTopOf="@id/imagesTV" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagesTV" />

            <EditText
                android:id="@+id/addItemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagesRecyclerView"
                tools:ignore="Autofill" />


            <EditText
                android:id="@+id/addItemDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/description"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addItemName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/addItemAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/address"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addItemDescription"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/addItemAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/age"
                android:inputType="number"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addItemAddress"
                tools:ignore="Autofill" />


            <TextView
                android:id="@+id/genderTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/gender"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addItemAge" />


            <RadioGroup
                android:id="@+id/genderRG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderTV">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/male"
                    android:textColor="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/female"
                    android:textColor="@color/colorPrimary" />

            </RadioGroup>

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:background="@drawable/back_solid_primary"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genderRG" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>