<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="showRetry"
            type="java.lang.Boolean" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="64dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/noInternetImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/no_internet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/noInternetTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/no_internet"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/noInternetImage"
                app:layout_constraintStart_toStartOf="@id/noInternetImage"
                app:layout_constraintTop_toBottomOf="@id/noInternetImage" />

            <TextView
                android:id="@+id/noInternetMessageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/check_internet_connection"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/noInternetImage"
                app:layout_constraintStart_toStartOf="@id/noInternetImage"
                app:layout_constraintTop_toBottomOf="@id/noInternetTV" />

            <Button
                android:id="@+id/noInternetRetry"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/back_solid_primary"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/retry"
                android:visibility="@{showRetry ? View.VISIBLE : View.GONE}"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noInternetMessageTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>