<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.gp.findlost.util.PrefManager" />

        <variable
            name="user"
            type="com.gp.findlost.data.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.editprofile.EditProfileFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <EditText
            android:id="@+id/firstNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@drawable/back_border_accent"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:text="@{PrefManager.getUser().firstName}"
            android:textColor="@color/colorTitle"
            android:textColorHint="@color/colorGray"
            app:layout_constraintBottom_toTopOf="@+id/phoneET"
            app:layout_constraintEnd_toStartOf="@id/lastNameET"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"
            tools:ignore="Autofill" />


        <EditText
            android:id="@+id/lastNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/back_border_accent"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:text="@{PrefManager.getUser().lastName}"
            android:textColor="@color/colorTitle"
            android:textColorHint="@color/colorGray"
            app:layout_constraintBottom_toBottomOf="@+id/firstNameET"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/firstNameET"
            app:layout_constraintTop_toTopOf="@id/firstNameET"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/phoneET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_border_accent"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:text="@{PrefManager.getUser().phone}"
            android:textColor="@color/colorTitle"
            android:textColorHint="@color/colorGray"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/firstNameET"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/back_solid_primary"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/phoneET" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>